--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -60,6 +60,10 @@ p {
     color: black;
 }
 
+h5{
+    margin: 0;
+}
+
 .font-white {
     font-family: Arial, sans-serif;
     font-style: normal;
@@ -995,7 +999,23 @@ input:focus {
     cursor: pointer;
     font-family: Arial, sans-serif;
     font-style: normal;
+}
 
+.buttoncard_location {
+    /* Styles for the button inside the card */
+    background-color: #F17C1E;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 10px;
+    right: 220px;
+    cursor: pointer;
+    font-family: Arial, sans-serif;
+    font-style: normal;
 }
 
 .disabled_buttoncard {
@@ -1051,6 +1071,7 @@ input:focus {
 
 #horizontal-card-group {
 
+    display: flex;
     flex-direction: row;
     /* text-align: justify; */
     height: 300px;
@@ -1064,7 +1085,6 @@ input:focus {
     text-align: left;
     cursor: pointer;
     transition: all 0.5s;
-    display: flex;
     align-items: left;
     justify-content: left;
     user-select: none;
@@ -1394,5 +1414,13 @@ SEARCH PAGE
 
     #food-header-group #content {
         width: 100%;
+    }
+
+    #horizontal-card-group{
+        flex-direction: column;
+    }
+
+    h5{
+        font-size: 10px;
     }
 }
