--- a/views/pages/accommodate-page.ejs
+++ b/views/pages/accommodate-page.ejs
@@ -28,6 +28,36 @@
                 <button id="accomm-directions" class="font-white">Get Directions</button>
             </div>
         </div>
+
+
+        <!-- ORIGINAL ACCOMMODATION.EJS DATA FETCH -->
+        <div id="wrap">
+            <% var accommodation = accommodation %>
+            <% for (index in accommodation){%>
+                <div id="card-group">
+                    <div class="card-image">
+                        <img src=<%= accommodation[index]['Images Attached']%> />
+                    </div>
+                    <div class="card-body">
+                      <h2 class="font-black"><%= accommodation[index]['Title']%></h5>  
+                      <p class="font-black"><%= accommodation[index]['Description'] %></p>
+                      <% var link = accommodation[index]['Link']%>
+                      <% var card_state = 'buttoncard'%>
+                      <% if(!link){%>
+                        <% link = '#'%>
+                        <% card_state = 'disabled_buttoncard'%>
+                      <% } %>
+                      <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Accomodation</a>
+                    
+                    </div>
+                </div>
+            <% } %>
+        </div>
+
+
+
+
+
     </div>
 
 </body>
