--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -64,9 +64,9 @@
                 <div class="homebackground">
                     <div class="two-vertical-panels">
                         <div id="home-highlights-body">
-                            <p class="font-white" id="title">The City's Most Famous <span
+                            <p class="font-black" id="title">The City's Most Famous <span
                                     class="font-peach">HIGHLIGHTS</span></p>
-                            <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
+                            <p class="font-black" id="content"><span class="font-peach">Potter ipsum</span> wand elf
                                 parchment wingardium.
                                 Wand betrayal parseltongue soul detention elf lion back his.
                                 Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
@@ -84,7 +84,12 @@
             <div id="home-explore">
                 <div class="homebackground">
                     <div id="home-explore-body">
-                        <p class="font-white" id="title">EXPLORE ILOILO</p>
+                        <p class="font-black" id="title">Latest <span
+                            class="font-peach">News</span></p>
+                            <p class="font-black" id="content"><span class="font-peach">The latest</span> happenings
+                                here in Iloilo City, right at your fingertips. 
+
+                            </p>
                         <div class="card-container">
 
 
