--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -28,7 +28,7 @@
         <div id="accommodation-body">
             <div id="accommodation-body-group">
                 <div id="body-header">
-                    <p class="font-black" id="third-title">ACCOMMODATION</p>
+                    <p class="font-black" id="third-title">ACCOMMODATION</p>accommodation
                     <div class="filter-row">
                         <p class="font-black">Sort By:</p>
                         <button>Name</button>
@@ -37,17 +37,17 @@
                     </div>                  
                     
                     <div id="wraphorizontal">
-                        <% var accommodation = accommodation %>
-                        <% for (index in accommodation){%>
+                        <% var accommodations = accommodations %>
+                        <% for (index in accommodations){%>
                             <div id="horizontal-card-group" class="horizontalcard">
                                 <div class="horizontalcardimg" style="width: auto;">
-                                    <img src=<%= accommodation[index]['Images Attached']%> style="width:500px;height:80;
+                                    <img src=<%= accommodations[index]['Images Attached']%> style="width:500px;height:80;
                                     style="object-fit:cover;border-radius:10px;padding-top:1px;">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="font-black" style="font-size: 50px;"><%= accommodation[index]['Title']%></h5>
-                                    <p class="font-black" style="font-size: 20px;"><%= accommodation[index]['Description']%></p>
-                                    <% var link = accommodation[index]['Link']%>
+                                    <h5 class="font-black" style="font-size: 50px;"><%= accommodations[index]['Title']%></h5>
+                                    <p class="font-black" style="font-size: 20px;"><%= accommodations[index]['Description']%></p>
+                                    <% var link = accommodations[index]['Link']%>
                                     <!--Pls edit the card_state_location below to fetch map coordinates-->
                                     <% var card_state_location = 'buttoncard_location'%>
                                     <% if(!link){%>
