--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -20,7 +20,7 @@
         <!--search bar-->
         <div id="search-bar">
             <form id="search-bar-form">
-                <input id="search-bar-input" type="search" id="query" placeholder="Search..">
+                <input id="search-bar-input" type="search" id="query" name="query" placeholder="Search..">
                 <button id="search-bar-button"><img src="/img/search.png"></button>
             </form>
         </div>
