Added redirection to search page.

--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -19,7 +19,7 @@
     <li class="top-child" id="search-child">
         <!--search bar-->
         <div id="search-bar">
-            <form id="search-bar-form">
+            <form id="search-bar-form" action="/search">
                 <input id="search-bar-input" type="search" id="query" name="query" placeholder="Search..">
                 <button id="search-bar-button"><img src="/img/search.png"></button>
             </form>
