Added text and links to home page
Added links and text to homepage to add more information and fill out the website.

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -94,48 +94,46 @@
 
 
                             <div class="homecard">
-                                <img src="/img/placeholder.jpg" class="homecardimg" alt="">
+                                <img src="/img/travelguidepic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
-                                    <h1 class="homecardtitle">ILOILO CITY</h1>
-                                    <p class="homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                        Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor
-                                        sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur
-                                        exercitationem sed culpa.</p>
-                                    <button class="buttoncard">Learn More</button>
-                                </div>
-                            </div>
-                            <div class="homecard">
-                                <img src="/img/placeholder.jpg" class="homecardimg" alt="">
-                                <div class="homecardimgbody">
-                                    <h1 class="homecardtitle">ILOILO CITY</h1>
-                                    <p class="homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                        Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor
-                                        sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur
-                                        exercitationem sed culpa.</p>
-                                    <button class="buttoncard">Learn More</button>
+                                    <h1 class="homecardtitle">Travel Guide</h1>
+                                    <p class="homecardinfo">Here is a list of things to do in Iloilo! A compact travel guide to help you should you visit outside of Iloilo!</p>
+                                        <a href="https://guidetothephilippines.ph/articles/ultimate-guides/iloilo-travel-guide" class="buttoncard">Learn More</a>
                                 </div>
                             </div>
 
                             <div class="homecard">
-                                <img src="/img/placeholder.jpg" class="homecardimg" alt="">
+                                <img src="/img/panaynewspic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
-                                    <h1 class="homecardtitle">ILOILO CITY</h1>
-                                    <p class="homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                        Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor
-                                        sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur
-                                        exercitationem sed culpa.</p>
-                                    <button class="buttoncard">Learn More</button>
+                                    <h1 class="homecardtitle">ILoilo Latest News</h1>
+                                    <p class="homecardinfo">Access Panay News, the biggest daily newspaper in Western Visayas brings you breaking news on environment, nation, Metro Bacolod, Iloilo, and top stories from around the world.</p>
+                                        <a href="https://guidetothephilippines.ph/articles/ultimate-guides/iloilo-travel-guide" class="buttoncard">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="homecard">
+                                <img src="/img/localgovtpic.jpg" class="homecardimg" alt="">
+                                <div class="homecardimgbody">
+                                    <h1 class="homecardtitle">Iloilo City Local Government</h1>
+                                    <p class="homecardinfo">Access comprehensive information about your travel location!
+
+                                        Discover essential details such as travel regulations, safety guidelines, local attractions from the local government.
+                                    </p>
+                                    <a href="https://iloilocity.gov.ph/main/" class="buttoncard">Learn More</a>
                                 </div>
                             </div>
 
-
+                            <div class="homecard">
+                                <img src="/img/thingstodopic.jpg" class="homecardimg" alt="">
+                                <div class="homecardimgbody">
+                                    <h1 class="homecardtitle">Things to do in Iloilo City</h1>
+                                    <p class="homecardinfo">Learn more about the activities that Iloilo City has to offer with this comprehensive list of activities, each one a must add to your travel to-do list!</p>
+                                        <a href="https://www.klook.com/en-PH/city/481-iloilo-things-to-do/?gad=1&gclid=Cj0KCQjw98ujBhCgARIsAD7QeAitxuS-7yea2v71EkSAQglo227rIZf6K6ggRwOLonNhPjVuVayY16YaAnp5EALw_wcB&gclsrc=aw.ds" class="buttoncard">Learn More</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
 </body>
 
 </html>
